--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "19app",
+  "homepage": "https://Sailorarctic.github.io/AI-Chat-Assistant",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
