--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,24 +1,45 @@
-name: Build and Deploy to GitHub Pages
+name: Deploy React App to Pages
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
+
+# Grants the required permissions for the deploy job
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 
+      - name: Checkout 🛎️
         uses: actions/checkout@v4
-      
-      - name: Install and Build 
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20 # Use a stable Node version
+
+      - name: Install dependencies and Build 🛠️
         run: |
-          npm install
+          npm ci
           npm run build
       
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      # 🎯 Official step to upload the 'build' folder as an artifact
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+          path: './build'
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      # 🎯 Official step to deploy the artifact to GitHub Pages
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
