--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "uuid": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
